@@ -1,4 +1,5 @@
 In development
+	* Links in profile bio are now clickable
 	+ Link to the twitter.com page on the profile page
 	* Larger avatars on the profile page allowed, up to 96px in width
 	* Small bug with friendship cache updater fixed
